--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pydantic (>=2.11.4,<3.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "typer (>=0.15.4,<0.16.0)"
 ]
 
 
@@ -20,6 +22,7 @@ optional = true
 ruff = ">=0.11.9"
 mypy = ">=1.15.0"
 pre-commit = ">=4.2.0"
+pytest = "^8.3.5"
 
 
 [tool.ruff]
